Added css to the welcome section - home.html

--- a/home.html
+++ b/home.html
@@ -55,22 +55,22 @@
                 </div>
             </div>
             <div class="works-container">
-                <div class="work">
+                <div class="work one">
                     <div class="work-title">
-                        <h4>Fall &amp; srping clean up</h4>
+                        <h4>Fall &amp; spring clean up</h4>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work two">
                     <div class="work-title">
                         <h4>Lawn care</h4>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work three">
                     <div class="work-title">
                         <h4>Landscape design &amp; installation</h4>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work four">
                     <div class="work-title">
                         <h4>Plants, flowers, soils and mulches</h4>
                     </div>
