Added css for the footer - home.html

--- a/home.html
+++ b/home.html
@@ -169,9 +169,9 @@
                  <nav>
                      <ul>
                          <li><a href="">Fall &amp; spring clean up</a></li>
-                         <li><a href=""></a>Lawn Care</li>
-                         <li><a href=""></a>Landscape design &amp; installation</li>
-                         <li><a href=""></a>Plants, flowers, soils and mulches</li>
+                         <li><a href="">Lawn care</a></li>
+                         <li><a href="">Landscape design &amp; installation</a></li>
+                         <li><a href="">Plants, flowers, soils and mulches</a></li>
                      </ul>
                  </nav>
              </div>
