Prepared the structure for about.html

--- a/home.html
+++ b/home.html
@@ -19,12 +19,13 @@
         <nav>
             <!-- ul>li*4>a generates 4 links -->
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
+                <li class="active"><a href="home.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">Contact Us</a></li>
             </ul>
         </nav>
+    </header>
 
         <section id="intro">
             <div class="intro-text">
@@ -190,6 +191,5 @@
              </div>
          </footer>
         
-    </header>
 </body>
 </html>
