--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About | Garden</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="about.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/about.css" />
     <script src="main.js"></script>
 </head>
 <body>
@@ -26,7 +26,7 @@
     </header>
 
     <section id="showcase">
-        <div id="text">
+        <div class="text">
             <h2>About Us</h2>
         </div>
     </section>
