Added css for History and Our team section for about.html

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
             <div class="member">
                 <img src="img/t3.jpg" alt="">
                 <h5>Mike Gregoire</h5>
-                <h6>Desginer/h6>
+                <h6>Desginer</h6>
             </div>
             <div class="member">
                 <img src="img/t4.jpg" alt="">
